# rusty_terminal_arcade

./: Cargo.toml
src/: main.rs
src/games/: mod.rs
src/games/invaders/: README.md  frame.rs  invaders.rs  mod.rs  player.rs  render.rs  shot.rs
src/games/snake/: direction.rs  food.rs  mod.rs  snake.rs
src/utils/: frame.rs  generate_random_point.rs  mod.rs  render.rs
