[package]
name = "rusty_terminal_arcade"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.17.5"
console = "0.15.0"
dialoguer = "0.10.1"
rusty_audio = "1.1.4"
rusty_time = "0.11.0"
rand = "0.8.5"
